[package]
name = "img-forest"
version = "0.1.0"
authors = ["Tyler <tyler.steele@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-session = "0.4"
actix-web = "3.3"
base64 = "0.13"
serde = "1.0"
